Estou atualizando o Readme

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ O HOLERITE RAILS é um sistema que auxilia na organização de contracheques, ev
 Os relatórios gerados pelo sistema podem ser ordenados de várias maneiras e visualizados antes de serem impressos, o que poupará tempo e também impressões desnecessárias.
 
 Nova versão Rails 4
+
+Estou Editando 
